--- a/Docker/mysql/docker-compose.yml
+++ b/Docker/mysql/docker-compose.yml
@@ -1,29 +1,29 @@
 version: '3'
  
 services:
-  db:
-    image: mysql:5.7
-    container_name: db
+  mysql8:
+    image: mysql:8
+    container_name: mysql8
     environment:
-      MYSQL_ROOT_PASSWORD: my_secret_password
-      MYSQL_DATABASE: app_db
+      MYSQL_ROOT_PASSWORD: toor
+      MYSQL_DATABASE: app_mysql
       MYSQL_USER: db_user
-      MYSQL_PASSWORD: db_user_pass
+      MYSQL_PASSWORD: db_user
     ports:
-      - "6033:3306"
+      - "6034:3306"
     volumes:
-      - dbdata:/var/lib/mysql
+      - mysql8data:/var/lib/mysql
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
-    container_name: pma
+    container_name: pma8
     links:
-      - db
+      - mysql8
     environment:
-      PMA_HOST: db
+      PMA_HOST: mysql8
       PMA_PORT: 3306
       PMA_ARBITRARY: 1
     restart: always
     ports:
       - 8081:80
 volumes:
-  dbdata:
+  mysql8data:
