--- a/Front-end/mercadocell/package.json
+++ b/Front-end/mercadocell/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@hookform/error-message": "^2.0.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -12,6 +14,7 @@
     "cors": "^2.8.5",
     "js-cookie": "^3.0.1",
     "js-cookies": "^1.0.4",
+    "material-table": "^1.69.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.17.5",
